syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/theme-ce/simple-shop/pb";

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string address = 5;
    string password = 6;
}

message CreateUserResponse {
    User user = 1;
}